tests/ui/parser/misspelled-keywords/return.rs
fn code() -> u8 {
    let a = 10;
    returnn a;
    //~^ ERROR expected one of
}

fn main() {}
